# huji

./: README.md
IoT-67612/: README
IoT-67612/ex1/: CMakeLists.txt  HTTP_client.c  HTTP_client.h  README  main.c  socket.h
IoT-67612/ex2/: CMakeLists.txt  MQTTClient.c  MQTTClient.h  README  main.c  socket.c  socket_linux.c
IoT-67612/ex3/: CMakeLists.txt  README  main.c  serial_io.c  serial_io.h
IoT-67612/ex4/: CMakeLists.txt  README  cellular.c  cellular.h  main.c  serial_io_linux.c
IoT-67612/ex5/: CMakeLists.txt  HTTP_client.c  HTTP_client.h  README  cellular.c  cellular.h  cellular_common.c  cellular_common.h  cellular_parse_operators.c  cellular_parse_operators.h  cellular_parse_physical.c  cellular_parse_physical.h  main.c  serial_io.h  socket.h  socket_linux_modem.c  utils.c
IoT-67612/ex6/: CMakeLists.txt  MQTTClient.c  MQTTClient.h  README  cellular.c  cellular.h  cellular_common.c  cellular_common.h  cellular_internet.c  cellular_internet.h  cellular_parse_operators.c  cellular_parse_physical.c  global.h  main.c  serial_io.h  socket.h  socket_linux.c  socket_linux_modem.c  utils.c
IoT-67612/ex6/wolfmqtt/: mqtt_client.c  mqtt_client.h  mqtt_packet.c  mqtt_packet.h  mqtt_socket.c  mqtt_socket.h  mqtt_types.h
IoT-67612/ex8/: ex8.sls
IoT-67612/ex9/: README  ex9.sls
holocaust and law-62424/: סיכום שואה ומשפט.docx  תשובון מעודכן.docx
iml-67577/ex3/: models.py  (+2 more)
learning-seminar-67618/: Proving the Lottery Ticket Hypothesis summary.docx
logic-67501/: README
sex - Reproduction from Molecules to Elephants-72159/: Unit 1.docx  Unit 2.docx  Unit 5.docx
(+865 files in other folders)
